--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,10 @@
-
+*, :after, :before {
+  box-sizing: border-box;
+}
+ul {
+  list-style: none;
+  padding-left: 0;
+}
 .app{
   display: grid;
   grid-template-areas: 'header header' 'sidebar content';
